Aula 03 CSS CLT

--- a/Aula03/curriculo.css
+++ b/Aula03/curriculo.css
@@ -70,7 +70,7 @@ ul {
   #customers th {
     padding-top: 12px;
     padding-bottom: 12px;
-    text-align: left;
-    background-color: #04AA6D;
+    text-align: center;
+    background-color: #1C3879;
     color: white;
   }
