Aula 2 de SpringBoot

--- a/AppEventos/AppEventos/src/main/resources/templates/header.html
+++ b/AppEventos/AppEventos/src/main/resources/templates/header.html
@@ -8,6 +8,8 @@
 
 <div class="container center">
 	<a href="/" class="waves-effect waves-light btn orange darken-3"><i class="material-icons left">home</i> Home</a>
+	<a href="/cadastrarLocal" class="waves-effect waves-light btn orange darken-3"><i
+		class="material-icons left">add_circle_outline</i> Cadastrar Local</a>
 	<a href="/cadastrarEvento" class="waves-effect waves-light btn orange darken-3"><i
 			class="material-icons left">add_circle_outline</i> Cadastrar Evento</a>
 	<a href="/listarEventos" class="waves-effect waves-light btn orange darken-3"><i class="material-icons left">list</i>
